# complementary-dynamics-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindLIBIGL.cmake  bartels.cmake
demo/: complementary_dynamics.cpp  lbs.cpp  linear_demo.cpp  nonlinear_demo.cpp
examples/elephant/: elephant.dmat  elephant.json  elephant.mesh  elephant.tgf  elephant_anim.txt
examples/fish/: fish.dmat  fish.json  fish.tgf
examples/frog/: frog.json  frog.mesh  frog.tgf  frog_anim.txt  frog_mask.dmat  frog_tet_to_surf.spmat  frog_weight.dmat
examples/golden_fish/: golden_fish.json  golden_fish.mesh  golden_fish_anim.txt
examples/sphere/: sphere.dmat  sphere.json  sphere.mesh  sphere.tgf  sphere_anim.txt
include/: create_mask_matrix.h  lbs_matrix.h  line_search.h  lumped_mass_matrix.h  read_data_from_json.h  util.h
src/: create_mask_matrix.cpp  lbs_matrix.cpp  line_search.cpp  lumped_mass_matrix.cpp  read_data_from_json.cpp
